# bcachefs_scratch

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: genrev.cmake
docs/: CMakeLists.txt  conf.py  index.rst
examples/: CMakeLists.txt
src/: CMakeLists.txt  bcachefs.cpp  bcachefs.h  cbcachefs.h  logger.cpp  logger.h  main.cpp
tests/: CMakeLists.txt  bcachefs_test.cpp
